# bookstore

./: Cargo.toml  build.rs
migrations/: 0001_books_table.sql
src/: main insert.rs  main retrieve.rs
