[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx-cli = "0.5.7"
tokio= { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres","runtime-tokio-rustls"] }
futures="0.3"